@@ -23,7 +23,7 @@ DESCRIPTION
     functionality! You might to call fakechroot with fakeroot command, if
     you want to emulate root environment, i.e.:
 
-     $ fakeroot fakechroot /usr/sbin/chroot /tmp/debian
+     $ fakeroot fakechroot /usr/sbin/chroot /tmp/debian /bin/sh
      # id
      uid=0(root) gid=0(root) groups=0(root)
 
@@ -36,8 +36,11 @@ COPYING
     (LGPL 2.1 or greater).
 
 AUTHORS
-    (c) 2003-2007 Piotr Roszatycki <dexter@debian.org>
+    Copyright (c) 2003-2008 Piotr Roszatycki <dexter@debian.org>
 
-    (c) 2006-2007 Lionel Tricon <lionel.tricon@free.fr>
+    Copyright (c) 2006-2007 Lionel Tricon <lionel.tricon@free.fr>
 
-    (c) 2007 Mark Eichin <eichin@metacarta.com>
+    Copyright (c) 2007 Mark Eichin <eichin@metacarta.com>
+
+SEE ALSO
+    http://fakechroot.alioth.debian.org/
