@@ -12,7 +12,10 @@ I'm glad to see that fakechroot had found another purposes:
 I would like to thank to:
 
   * Marcin Jakubowski <user@debian.pl>, for an inspiration
+  * joost witteveen <joost@rulcmc.leidenuniv.nl>, for its fakeroot
   * Lionel Tricon <lionel.tricon@free.fr>, for an exclude path list feature
-  * Mark Eichin <eichin@metacarta.com>, for a countless patches with bugfixes
+  * Mark Eichin <eichin@metacarta.com>, for countless patches with bugfixes
+  * Martin Pitt <martin.pitt@ubuntu.com>, for great Ubuntu support
+  * Daniel Kahn Gillmor <dkg-debian.org@fifthhorseman.net>, for testing
 
- -- Piotr Roszatycki <dexter@debian.org>  Fri,  4 May 2007 23:04:50 +0200
+ -- Piotr Roszatycki <dexter@debian.org>  Tue, 15 Jul 2008 14:07:14 +0200
