@@ -35,7 +35,7 @@ In the current version, the fakechroot does not provide the fakeroot(1)
 functionality! You might to call fakechroot with fakeroot command, if you
 want to emulate root environment, i.e.:
 
- $ fakeroot fakechroot /usr/sbin/chroot /tmp/debian
+ $ fakeroot fakechroot /usr/sbin/chroot /tmp/debian /bin/sh
  # id
  uid=0(root) gid=0(root) groups=0(root)
 
@@ -85,18 +85,18 @@ An example session with fakechroot:
  $ export PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin
  :/bin:/usr/bin/X11
  $ fakeroot -s fakechroot.save fakechroot debootstrap --variant=fakech
- root sarge /tmp/sarge
+ root lenny /tmp/lenny
 
- $ fakeroot -i fakechroot.save fakechroot chroot /tmp/sarge /bin/bash
+ $ fakeroot -i fakechroot.save fakechroot chroot /tmp/lenny /bin/bash
  # cd /
  # sh /usr/share/doc/fakechroot/examples/savemode.sh
- # echo deb http://ftp.debian.org/debian sarge main contrib non-free >
+ # echo deb http://ftp.debian.org/debian lenny main contrib non-free >
  /etc/apt/sources.list
- # echo deb-src http://ftp.debian.org/debian sarge main contrib non-fr
+ # echo deb-src http://ftp.debian.org/debian lenny main contrib non-fr
  ee >> /etc/apt/sources.list
  # apt-get update
  # apt-get install adduser whiptail build-essential devscripts
- # adduser --uid 1001 dexter
+ # adduser --uid 1001 user
  # cd /tmp
  # apt-get source hello
  # cd hello-*
@@ -183,9 +183,10 @@ dpkg-divert(8).
 
 =item o
 
-ldd(1) also doesn't work.  You have to use wrapper.  The example wrapper is
-available at F<scripts/> directory in fakechroot's source package and it is
-located at F</usr/share/doc/fakechroot/examples> directory.
+ldd(1) also doesn't work.  You have to use C<alias
+ldd='LD_TRACE_LOADED_OBJECTS=1'> or to use a wrapper instead.  The example
+wrapper is available at F<scripts/> directory in fakechroot's source package
+and it is located at F</usr/share/doc/fakechroot/examples> directory.
 
 =item o
 
@@ -216,22 +217,14 @@ fakechroot is distributed under the GNU Lesser General Public License (LGPL
 
 =head1 AUTHORS
 
-=over
+Copyright (c) 2003-2008 Piotr Roszatycki <dexter@debian.org>
 
-=item (c)
+Copyright (c) 2006-2007 Lionel Tricon <lionel.tricon@free.fr>
 
-2003-2007 Piotr Roszatycki <dexter@debian.org>
-
-=item (c)
-
-2006-2007 Lionel Tricon <lionel.tricon@free.fr>
-
-=item (c)
-
-2007 Mark Eichin <eichin@metacarta.com>
-
-=back
+Copyright (c) 2007 Mark Eichin <eichin@metacarta.com>
 
 =head1 SEE ALSO
 
-fakeroot(1), dpkg-buildpackage(1), debuild(1), debootstrap(8)
+fakeroot(1), dpkg-buildpackage(1), debuild(1), debootstrap(8),
+http://fakechroot.alioth.debian.org/
+
